; ModuleID = '/home/carl/AnghaBench/linux/net/sunrpc/extr_xprt.c_xprt_abs_ktime_to_jiffies.c'
source_filename = "/home/carl/AnghaBench/linux/net/sunrpc/extr_xprt.c_xprt_abs_ktime_to_jiffies.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@jiffies = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @xprt_abs_ktime_to_jiffies to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @xprt_abs_ktime_to_jiffies(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %4 = call i64 (...) @ktime_get()
  %5 = load i64, i64* %2, align 8
  %6 = sub nsw i64 %4, %5
  %7 = call i32 @ktime_to_ns(i64 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = icmp sge i32 %8, 0
  %10 = zext i1 %9 to i32
  %11 = call i64 @likely(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %1
  %14 = load i64, i64* @jiffies, align 8
  %15 = load i32, i32* %3, align 4
  %16 = call i64 @nsecs_to_jiffies(i32 %15)
  %17 = sub i64 %14, %16
  br label %24

18:                                               ; preds = %1
  %19 = load i64, i64* @jiffies, align 8
  %20 = load i32, i32* %3, align 4
  %21 = sub nsw i32 0, %20
  %22 = call i64 @nsecs_to_jiffies(i32 %21)
  %23 = add i64 %19, %22
  br label %24

24:                                               ; preds = %18, %13
  %25 = phi i64 [ %17, %13 ], [ %23, %18 ]
  ret i64 %25
}

declare dso_local i32 @ktime_to_ns(i64) #1

declare dso_local i64 @ktime_get(...) #1

declare dso_local i64 @likely(i32) #1

declare dso_local i64 @nsecs_to_jiffies(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
